# OpenSim_API_tutorial

./: .gitignore  CMakeLists.txt  README.md
doc/: basics.pptx
src/: CMakeLists.txt  README.md
src/01_build_model/: CMakeLists.txt  Dennis.osim  tutorial.cpp  tutorial_solutions.cpp
src/02_run_simulation/: CMakeLists.txt  tutorial.cpp  tutorial_solutions.cpp
src/03_perform_optimization/: CMakeLists.txt  tutorial.cpp  tutorial_solutions.cpp
src/04_perturbation_force/: CMakeLists.txt  PerturbationForce.cpp  PerturbationForce.h  PerturbationForceExports.h  README.md  RegisterPlugin.cpp  RegisterPlugin.h  TestPerturbationForce.cpp  test_plugin.py  test_prescribed_force.py  tug_of_war.osim
src/05_eye_fixation_controller/: CMakeLists.txt  FixationController.cpp  FixationController.h  FixationControllerExports.h  LICENSE  README.org  RegisterPlugin.cpp  RegisterPlugin.h  Simulation.cpp  TestFixationController.cpp  UPAT_Eye_Model_Passive_Pulleys_v1.osim  UPAT_Eye_Model_Passive_Pulleys_v2.osim  UPAT_Eye_Model_Passive_Pulleys_v3.osim
src/06_model_component_neuron/: CMakeLists.txt  Neuron.cpp  Neuron.h  NeuronExports.h  RegisterPlugin.cpp  RegisterPlugin.h  TestNeuron.cpp  visualize_sto.py
src/tutorial_01/: CMakeLists.txt  tutorial.cpp  tutorial_solutions.cpp
